cart quantity functionality completed

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 
                         <div class="checkout-stuff d-flex">
                             <div class="qty-container me-3">
-                                <i class="bi bi-dash" style="color: hsl(26, 100%, 55%); font-weight: bolder;"></i>
+                                <i class="bi bi-dash" style="color: hsl(26, 100%, 55%); font-weight: bolder;" id="minus"></i>
                                 
                                 <span class="qty ms-3 me-3" style="font-weight: bolder;">1</span>
                                 
-                                <i class="bi bi-plus" style="color: hsl(26, 100%, 55%); font-weight: bolder;"></i>
+                                <i class="bi bi-plus" style="color: hsl(26, 100%, 55%); font-weight: bolder;" id="plus"></i>
                             </div>
 
                             <button class="btn ps-5 pe-5" style="background: hsl(26, 100%, 55%); color: #fff; font-weight: bolder;">
@@ -137,5 +137,7 @@
             integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
             crossorigin="anonymous"
         ></script>
+
+        <script src="app.js"></script>
     </body>
 </html>
