managed to display the product image whose thumbnail was clicked. I'm very surprised to discover that it worked. Miracles do happen

--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
             <main class="mt-5 mb-5">
                 <div class="visuals me-5">
                     <div class="main-visual">
-                      <img src="assets/images/image-product-1.jpg" class="w-100 main-img" alt="">
-                      <img src="assets/images/image-product-2.jpg" class="w-100 product-img" alt="">
-                      <img src="assets/images/image-product-3.jpg" class="w-100 product-img" alt="">
-                      <img src="assets/images/image-product-4.jpg" class="w-100 product-img" alt="">
+                      <img src="assets/images/image-product-1.jpg" class="w-100 main-img" alt="" id="image-one">
+                      <img src="assets/images/image-product-2.jpg" class="w-100 product-img" alt="" id="image-two">
+                      <img src="assets/images/image-product-3.jpg" class="w-100 product-img" alt="" id="image-three">
+                      <img src="assets/images/image-product-4.jpg" class="w-100 product-img" alt="" id="image-four">
                     </div>
 
                     <div class="thumbs d-flex justify-content-between mt-3">
-                      <img src="assets/images/image-product-1-thumbnail.jpg" alt="" class="thumb active">
-                      <img src="assets/images/image-product-2-thumbnail.jpg" alt="" class="thumb ms-4 me-4">
-                      <img src="assets/images/image-product-3-thumbnail.jpg" alt="" class="thumb">
-                      <img src="assets/images/image-product-4-thumbnail.jpg" alt="" class="thumb ms-4">
+                      <img src="assets/images/image-product-1-thumbnail.jpg" alt="" class="thumb" id="thumb-one">
+                      <img src="assets/images/image-product-2-thumbnail.jpg" alt="" class="thumb ms-4 me-4" id="thumb-two">
+                      <img src="assets/images/image-product-3-thumbnail.jpg" alt="" class="thumb" id="thumb-three">
+                      <img src="assets/images/image-product-4-thumbnail.jpg" alt="" class="thumb ms-4" id="thumb-four">
                     </div>
                 </div>
 
