completed the active state of cart, avatar and thumbs

--- a/index.html
+++ b/index.html
@@ -59,25 +59,41 @@
                                     <a class="nav-link" href="#">About</a>
                                     <a class="nav-link" href="#">Contact</a>
                                 </div>
-                                <div class="cart-item d-flex">
+                                
+                            </div>
+                        </div>
+                        <div class="cart-item d-flex">
                                     
-                                    <a class="nav-link me-3" href="#">
+                                    <a class="nav-link me-3" href="cart.html" id="cart">
                                         <img
                                             src="assets/images/icon-cart.svg"
                                             alt=""
                                         />
+
+                                        <div class="cart-overview">
+                                            <h6 style="color: #000;" >Cart</h6>
+                                            <hr>
+
+                                            <p class="text-center">Your cart is empty!</p>
+                                        </div>
                                     </a>
 
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="#" id="avatar">
                                         <img
                                             src="assets/images/image-avatar.png"
                                             alt=""
                                             class="avatar-img"
                                         />
+
+                                        <div class="avatar-overview">
+                                            <ul>
+                                                <li>Profile</li>
+                                                <li>Settings</li>
+                                                <li>Logout</li>
+                                            </ul>
+                                        </div>
                                     </a>
                                 </div>
-                            </div>
-                        </div>
                     </div>
                 </nav>
             </header>
@@ -93,9 +109,9 @@
 
                     <div class="thumbs d-flex justify-content-between mt-3">
                       <img src="assets/images/image-product-1-thumbnail.jpg" alt="" class="thumb" id="thumb-one">
-                      <img src="assets/images/image-product-2-thumbnail.jpg" alt="" class="thumb ms-4 me-4" id="thumb-two">
+                      <img src="assets/images/image-product-2-thumbnail.jpg" alt="" class="thumb ms-5 me-5" id="thumb-two">
                       <img src="assets/images/image-product-3-thumbnail.jpg" alt="" class="thumb" id="thumb-three">
-                      <img src="assets/images/image-product-4-thumbnail.jpg" alt="" class="thumb ms-4" id="thumb-four">
+                      <img src="assets/images/image-product-4-thumbnail.jpg" alt="" class="thumb ms-5" id="thumb-four">
                     </div>
                 </div>
 
