completed the mobile version of the page

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                                     <a
                                         class="nav-link"
                                         aria-current="page"
-                                        href="#"
+                                        href="index.html"
                                         >Collections</a
                                     >
-                                    <a class="nav-link" href="#">Men</a>
-                                    <a class="nav-link" href="#">Women</a>
-                                    <a class="nav-link" href="#">About</a>
-                                    <a class="nav-link" href="#">Contact</a>
+                                    <a class="nav-link" href="men.html">Men</a>
+                                    <a class="nav-link" href="women.html">Women</a>
+                                    <a class="nav-link" href="about.html">About</a>
+                                    <a class="nav-link" href="contact.html">Contact</a>
                                 </div>
                                 
                             </div>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
 
-                <div class="product-details pt-5 pb-5">
+                <div class="product-details">
                     <h6 style="color: hsl(26, 100%, 55%);">Sneaker Company</h6>
 
                     <h1>Fall Limited Edition Sneakers</h1>
@@ -123,8 +123,9 @@
                     <p style="font-size: 16px;" class="mt-4 mb-4">These low-profile sneakers are your perfect casual wear companion. Featuring a 
   durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
 
+  <div class="pricing-details">
   <span style="font-weight: bolder; font-size: 25px;" class="me-3">$125.00</span> <span class="discount" style="color: hsl(26, 100%, 55%); background-color: hsl(25, 100%, 94%);">50%</span>
-  <p style="color: hsl(220, 14%, 75%);"><s>$250.00</s></p>
+  <p class="former-price" style="color: hsl(220, 14%, 75%);"><s>$250.00</s></p></div>
 
                         <div class="checkout-stuff d-flex">
                             <div class="qty-container me-3">
